J2SE1.4 でビルドできなくなっていたので修正しました．
git-svn-id: https://www.seasar.org/svn/s2container/trunk@1967 319488c0-e101-0410-93bc-b5e51f62721a